css: Fix overflow in channel dropdown widget in user profile.
This commit fixes the channel name overflow in dropdown widget after
selecting a long channel name and abbreviates the channel name.

--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -602,6 +602,12 @@ ul.popover-group-menu-member-list {
             align-items: baseline;
             padding-top: 2px;
         }
+
+        .dropdown_widget_value {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
 
     .stream-list-top-section {
